--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 /**nav**/
 
 .nav{
-height: 12vh;
 background-color: #003049;
 color: white;
 font-weight: 800;
@@ -13,12 +12,26 @@ display: flex;
 justify-content: center;
 align-items: center;
 border-bottom: 0.3px solid white;
-}
+padding: 1rem 0rem;
 
+}
+.h1{
+    box-shadow: 5px 5px 10px black;
+    border-radius: 0.5rem ;
+    border: 4px solid grey;
+    background-color: #197278;
+
+}
+h1{
+    margin: 0rem 1rem;
+    text-shadow: 2px 2px 2px black ;
+    font-size: 3rem;
+    
+}
 /**game area**/
 
 main{
-    background-color: #669bbc;
+    background-color: #0d3b66;
     text-align: center;
     padding-bottom: 20px;
 }
@@ -41,6 +54,11 @@ main{
     align-items: center;
     flex-wrap: wrap;
     gap: 1.5vmin;
+    box-shadow:  0 0 1rem #000;
+    padding: 1rem;
+    border-radius: 1rem;
+    border: 4px solid grey;
+    background-color: #f4d35e;
 }
 
 .box{
@@ -49,20 +67,21 @@ main{
     border-radius: 1rem;
     font-size: 10vmin;
     border: none;
-    box-shadow: 0 0 1rem rgba(0, 0, 0,0.5);
-    background-color: #ffffc7;
+    
+    box-shadow: inset 0 0 1rem  ;
+    background-color: #fdf0d5;
     color: #c1121f;
     font-weight: 600;
 }
 
 .reset{
     background-color: #003049;
-    border: none;
+    border: 2px solid grey;
     border-radius: 1rem;
     padding: 0.8rem;
     font-size: 1.1rem;
     color: white;
-    box-shadow: 0 0 1rem rgba(0, 0, 0,0.5);
+    box-shadow: 0 0 1rem rgba(0, 0, 5,1);
     
 } 
 
@@ -88,6 +107,7 @@ main{
     gap: 4rem ;
     background-color: #669bbc;
     flex-direction: column;
+    transition: all 2s;
 }
 
 #msg{
@@ -99,12 +119,13 @@ main{
 
 #newbtn{
     background-color: #003049;
-    border: none;
+    border: 2px solid grey;
     border-radius: 1rem;
     padding: 0.8rem;
     font-size: 1.1rem;
     color: white;
-    box-shadow: 0 0 1rem rgba(0, 0, 0,0.5);
+    box-shadow: 0 0 1rem grey;
+    
     
 
 }
