--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ justify-content: center;
 align-items: center;
 border-bottom: 0.3px solid white;
 padding: 1rem 0rem;
+width: 100%;
 
 }
 .h1{
@@ -34,6 +35,7 @@ main{
     background-color: #0d3b66;
     text-align: center;
     padding-bottom: 20px;
+    width: 100%;
 }
 
 .container{
@@ -41,6 +43,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     
     
    
@@ -108,12 +111,16 @@ main{
     background-color: #669bbc;
     flex-direction: column;
     transition: all 2s;
+    width: 100%;
+ 
 }
 
 #msg{
     font-size: 10vmin;
     color: gold;
     font-weight: 700;
+    text-shadow: 4px 4px 5px black;
+    padding: 4rem;
 
 }
 
